@@ -230,7 +230,7 @@ public class CompositeSet extends CompositeCollection implements Set {
         }
         return 0;
     }
-    private static Integer INTEGER_ONE = new Integer(1);
+    private static Integer INTEGER_ONE = Integer.valueOf(1);
 
     /**
      * Returns a {@link Map} mapping each unique element in the given
@@ -253,7 +253,7 @@ public class CompositeSet extends CompositeCollection implements Set {
             if (c == null) {
                 count.put(obj, INTEGER_ONE);
             } else {
-                count.put(obj, new Integer(c.intValue() + 1));
+                count.put(obj, Integer.valueOf(c.intValue() + 1));
             }
         }
         return count;
